--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /v1_16_5/build/classes/java/main/
 /v1_17_1/build/
 /v1_17_1/build/classes/java/main/
+/v1_18_2/build/
+/v1_18_2/build/classes/java/main/
