--- a/v1_18_2/src/main/resources/plugin.yml
+++ b/v1_18_2/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: DP-BubbleChat
 version: 1.0.0.1
 main: com.darksoldier1404.dbc.BubbleChat
 authors: [ DEAD_POOLIO_ ]
+api-version: 1.18
 depend:
   - DPP-Core
 commands:
